# TrafficLightsDetection

./: CMakeLists.txt  README.md  ssd_detection.cpp  ssd_detection.py  ssd_detection_all.py  train_ssd_lisa.py
data/: create_data.sh  create_list.sh  gen_all_labels.sh  labelmap_lisa.prototxt  test.txt  test_name_size.txt  trainval.txt
models/VGGNet/LISA/SSD_414x125/: deploy.prototxt  solver.prototxt  test.prototxt  train.prototxt
